fixed animation on mobile

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -77,6 +77,7 @@
   .project-shown {
     height: 16rem;
     width: 32rem;
+    animation: 0.25s 'show-project-768' ease-in-out;
   }
   .project-shown > div {
     padding: 1rem;
@@ -100,6 +101,13 @@
 }
 
 @keyframes show-project {
+  0% {
+    opacity: 0.4;
+    transform: translateY(7rem) scale(0.2);
+  }
+}
+
+@keyframes show-project-768 {
   0% {
     opacity: 0.4;
     transform: translateX(15rem) scale(0.2);
